--- a/HVAC_Controller_Final/HVAC_Controller_Final.vbproj
+++ b/HVAC_Controller_Final/HVAC_Controller_Final.vbproj
@@ -73,11 +73,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.vb">
+    <Compile Include="HVAC_Controller.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.vb">
-      <DependentUpon>Form1.vb</DependentUpon>
+    <Compile Include="HVAC_Controller.Designer.vb">
+      <DependentUpon>HVAC_Controller.vb</DependentUpon>
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
