Digital and analog control added Alarm, HVAC and Fan Picture Boxes added

--- a/HVAC_Controller_Final/HVAC_Controller_Final.vbproj
+++ b/HVAC_Controller_Final/HVAC_Controller_Final.vbproj
@@ -119,6 +119,7 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+    <None Include="Resources\RobotoSlab-VariableFont_wght.ttf" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
